# mindgrapes-server

./: .env.dev.example  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  backup.sh  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml
web/: .dockerignore  Dockerfile  Dockerfile.dev  entrypoint.dev.sh  entrypoint.sh  pyproject.toml
web/config/: asgi.py  urls.py  wsgi.py
web/config/settings/: base.py  docker.py  local.py  production.py  test.py  test_integration.py
web/openbrain/accounts/: adapter.py  admin.py  apps.py  models.py  services.py  urls.py  views.py
web/openbrain/accounts/migrations/: 0001_initial.py  0002_enrollmenttoken.py
web/openbrain/brain/: apps.py  auth.py  consolidation.py  context_processors.py  db.py  embeddings.py  exceptions.py  excerpts.py  urls.py  views.py  vision.py
web/openbrain/brain/extraction/: __init__.py  claims.py  geo.py  images.py  metadata.py  openrouter_json.py  temporal.py
web/openbrain/brain/services/: activity.py  blobstore.py  captures.py  claim_writer.py  (+15 more)
web/openbrain/core/: apps.py  urls.py  views.py
web/openbrain/mcp/: annotations.py  apps.py  auth.py  boot.py  descriptions.py  errors.py  guards.py  ledger.py  resources.py  schemas.py  serialization.py  server.py
web/openbrain/oauth/: apps.py  cors.py  grants.py  jwt.py  models.py  scopes.py  server.py  services.py  urls.py  views.py
web/openbrain/templates/: base.html
web/openbrain/tests/: test_adapter.py  test_admin_actions.py  test_bootstrap_admin.py  test_connect.py  test_enroll_view.py  test_enrollment_token.py  test_integration.py  test_mfa.py  test_oauth_clients.py  test_oauth_commands.py  test_oauth_flow.py  test_oauth_jwt.py  test_oauth_revocation.py  test_oauth_views.py  test_passkey_views.py  test_production_settings.py  test_services.py  test_settings.py  test_styling.py  test_ui_redirect.py  test_user_model.py  test_views.py
(+148 files in other folders)
