# Mind Grapes — Django product layer (epic #61).
#
# The Django app lives under web/ (the repo root config/ is already the
# Postgres conf.d mount). It shares one Postgres with the MCP server (run_mcp,
# same codebase): Django tables live in public; brain.* is reached only
# through the raw-SQL seam in openbrain/brain/db.py.

[project]
name = "openbrain-web"
version = "0.1.0"
description = "Mind Grapes product layer: accounts, passkeys, OAuth AS (Django + HTMX)"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "psycopg[binary]>=3.1",
    "django-allauth>=65.0",
    "django-htmx>=1.17",
    "django-environ>=0.11",
    "whitenoise>=6.7",
    "fido2>=2.1",
    "authlib>=1.3",
    "joserfc>=1.7.1",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "fastmcp>=2.13",
    "boto3>=1.35",
    "pillow>=11.0",
    "pillow-heif>=0.18",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3",
    "pytest>=8.0",
    "pytest-django>=4.9",
    "pytest-playwright>=0.6",
    "ruff>=0.8",
    "watchfiles>=1.0",
]

[tool.uv]
# The app is run from source (bind-mounted in dev), not built into a wheel.
package = false

[tool.ruff]
line-length = 88
target-version = "py312"
# Django generates migration files; don't lint their import order/style.
extend-exclude = ["**/migrations/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ", "C90"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["openbrain", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-v --tb=short -m 'not integration and not e2e'"
markers = [
    "integration: requires the running dev Docker stack (docker compose -f docker-compose.dev.yml up)",
    "e2e: browser ceremony via Playwright + a virtual authenticator (run with -m e2e; needs `playwright install chromium`)",
]
